# FastRender

./: .gitignore  .travis.yml  AmbientOcclusionShader.cpp  AmbientOcclusionShader.h  Artifacts.cpp  Artifacts.h  AssetLoader.cpp  AssetLoader.h  AxisAlignedSlab.cpp  AxisAlignedSlab.h  BasicDiffuseSpecularShader.cpp  BasicDiffuseSpecularShader.h  Boolean.h  BoundingSphere.cpp  BoundingSphere.h  BoundingVolume.cpp  BoundingVolume.h  BoundingVolumeHierarchy.cpp  BoundingVolumeHierarchy.h  CMakeLists.txt  COMMANDS  CSG.cpp  CSG.h  Camera.h  Color.cpp  Color.h  Config.cpp  Config.h  Container.cpp  Container.h  CookTorranceMaterial.cpp  CookTorranceMaterial.h  DirectAreaLightShader.cpp  DirectEnvironmentMapShader.cpp  DirectEnvironmentMapShader.h  DirectLightingShaders.h  DirectPointLightShader.cpp  DistributionSamplers.cpp  DistributionSamplers.h  Editor.cpp  (+108 more)
FastRender/FastRender/: FastRender.1  main.cpp
FastRender/FastRender.xcodeproj/: project.pbxproj
FastRender/FastRender.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
FastRender/FastRender.xcodeproj/project.xcworkspace/xcuserdata/dave.xcuserdatad/: UserInterfaceState.xcuserstate
FastRender/FastRender.xcodeproj/xcuserdata/dave.xcuserdatad/xcschemes/: FastRender.xcscheme  xcschememanagement.plist
benchmarks/: CMakeLists.txt  vector.cpp
docker/: COMMANDS  Dockerfile
shaders/: basic.fs  basic.vs  gooch.fs  normals.fs  wireframe.fs
src/: Artifacts.cpp  Artifacts.h  AssetLoader.cpp  AssetLoader.h  AxisAlignedSlab.h  BoundingVolumeHierarchy.cpp  Color.cpp  Color.h  Config.cpp  Config.h  CookTorranceMaterial.cpp  CookTorranceMaterial.h  DirectAreaLightShader.h  DirectPointLightShader.cpp  DirectPointLightShader.h  Editor.cpp  EditorSceneGraph.cpp  EditorSceneGraph.h  EnvironmentMap.cpp  EnvironmentMap.h  FastRender.h  FlatContainer.h  Fresnel.h  GeometryUtils.cpp  HDRImage.cpp  HDRImage.h  Image.cpp  Image.h  ImageTracer.cpp  ImageTracer.h  InspectionShader.cpp  Lights.cpp  Lights.h  Logger.cpp  Logger.h  Material.cpp  Matrix.cpp  OpenGLUtil.cpp  OpenGLUtil.h  OpenGLWindow.cpp  (+28 more)
src/app/: main.cpp  test_materials.cpp  test_random.cpp  test_ray_trace.cpp  test_render.cpp
src/camera/: Camera.cpp  OmniCamera.cpp  SimpleCamera.h
src/cameras/: Camera.h  OmniCamera.cpp  OmniCamera.h  SimpleCamera.h
src/editor/: Editor.cpp  EditorSceneGraph.cpp  editormain.cpp
src/geometry/: Matrix.h  Vector.cpp  Vector.hpp
src/image/: HDRImage.cpp  Image.cpp  Image.h  RGBImage.cpp
src/material/: CookTorranceMaterial.cpp  Material.cpp  Material.h
src/opengl/: OpenGLUtil.h
src/shader/: AmbientOcclusionShader.h  BasicDiffuseSpecularShader.cpp  BasicDiffuseSpecularShader.h  DirectLightingShaders.cpp  DirectLightingShaders.h  InspectionShader.h  Shader.cpp  Shader.h
src/shading/: AmbientOcclusionShader.cpp  DirectAreaLightShader.cpp  GoochShader.h  InspectionShader.h  Shader.cpp  Shader.h
src/tests/: test_ray_trace.cpp  test_render.cpp  test_samplers.cpp
src/traceable/: AxisAlignedSlab.cpp  AxisAlignedSlab.h  Boolean.cpp  Container.cpp  SignedDistanceFunction.h  TMOctreeAccelerator.cpp  TMOctreeAccelerator.h  Traceable.cpp  Traceable.h  TraceableVisitor.h  TriangleMesh.cpp  TriangleMesh.h
test_scenes/materials/: MaterialTestAmbientOcclusion.scene  MaterialTestArcLight.scene  MaterialTestAreaLight.scene  MaterialTestBase.scene  MaterialTestCookTorranceAreaLight.scene  MaterialTestCookTorranceEnvironmentMap.scene  MaterialTestCookTorrancePointLight.scene  MaterialTestGooch.scene  MaterialTestHDREnvironmentMap.scene  MaterialTestHotBoxEnvironmentMap.scene  MaterialTestInspection.scene  MaterialTestMontageBase.scene  MaterialTestMontageTwoParamBase.scene  MaterialTestNullShader.scene  MaterialTestPointLight.scene
test_scenes/render/: AmbientOcclusion.scene  BunnyEtcDiffusePointLights.scene  BunnyEtcDiffusePointLights.scn  BunnyEtcVariousMaterialsPointLights.scene  BunnyEtcVariousMaterialsPointLights.scn  CSGLogicalANDLens.scene  CookTorranceAluminum.scn  CookTorranceBase.scn  CookTorranceBlood.scn  CookTorranceLead.scn  CookTorrancePolycarbonate.scn  DabrovicSponza.scene  EmissiveSphereLight.scene  Gooch.scene  Gooch.scn  GridRoom.scene  Hairball.scene  Hairball.scn  Logical.scene  MirrorSphereColoredSpheresArcLight.scene  MirrorSphereColoredSpheresArcLight.scn  RefractProfile.scene  RefractiveBunniesVaryingIOR.scene  RefractiveBunniesVaryingIOR.scn  RefractiveSphereEmissiveObjectCaustic.scene  RefractiveSpheresAndCubes.scene  RefractiveSpheresVaryingIOR.scene  RefractiveSpheresVaryingIOR.scn  Room.scene  Room.scn  RoomWithSpheres.scn  RoomWithSpheresCookTorrance.scn  SanMiguel.scene  SanMiguel.scn  SimpleCube.scene  SimpleCube.scn  SpheresColoredPointLights.scene  SpheresColoredPointLights.scn  SpheresPointLight.scene  SpheresPointLight.scn  (+4 more)
travis/: install-imagemagick.sh
ui/: GPUMesh.h  OpenGLUtil.h
unittests/: .gitignore  CMakeLists.txt  bxdf.cpp  raysphere.cpp  transform.cpp  vector.cpp
